<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_set_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/tb_set_profile"
            layout="@layout/view_toolbar"
            app:title="@{@string/set_profile_title}" />

        <TextView
            android:id="@+id/tv_set_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="34dp"
            android:text="@string/set_name"
            android:textAppearance="@style/TextAppearance.Kkumul.head_01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_set_profile" />

        <FrameLayout
            android:id="@+id/fl_set_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_set_name">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_set_name"
                style="@style/TextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_set_name"
                    style="@style/TextInputEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/hint_set_name"
                    android:textColorHint="@color/gray3" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:text="@string/counter_5"
                android:textAppearance="@style/TextAppearance.Kkumul.body_06"
                android:textColor="@color/gray3" />
        </FrameLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="14dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/sel_btn"
            android:enabled="false"
            android:text="@string/next"
            android:textAppearance="@style/TextAppearance.Kkumul.body_03"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>