<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_dialog_invitation_code"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_gray_fill_8_rect"
            android:backgroundTint="@color/white0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="310:254"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_invite_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/tv_invite_friend"
            android:textAppearance="@style/TextAppearance.Kkumul.body_01"
            app:layout_constraintEnd_toEndOf="@id/iv_dialog_invitation_code"
            app:layout_constraintStart_toStartOf="@id/iv_dialog_invitation_code"
            app:layout_constraintTop_toTopOf="@id/iv_dialog_invitation_code" />

        <TextView
            android:id="@+id/tv_share_invitation_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/tv_share_invitation_code"
            android:textAppearance="@style/TextAppearance.Kkumul.caption_02"
            android:textColor="@color/gray6"
            app:layout_constraintEnd_toEndOf="@id/iv_dialog_invitation_code"
            app:layout_constraintStart_toStartOf="@id/iv_dialog_invitation_code"
            app:layout_constraintTop_toBottomOf="@id/tv_invite_friend" />

        <ImageView
            android:id="@+id/iv_invitation_code"
            android:layout_width="0dp"
            android:layout_height="82dp"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="30dp"
            android:background="@color/gray0"
            app:layout_constraintEnd_toEndOf="@id/iv_dialog_invitation_code"
            app:layout_constraintStart_toStartOf="@id/iv_dialog_invitation_code"
            app:layout_constraintTop_toBottomOf="@id/tv_share_invitation_code" />

        <TextView
            android:id="@+id/tv_invitation_code_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_invitation_code_title"
            android:textAppearance="@style/TextAppearance.Kkumul.body_04"
            app:layout_constraintEnd_toEndOf="@id/iv_invitation_code"
            app:layout_constraintStart_toStartOf="@id/iv_invitation_code"
            app:layout_constraintTop_toTopOf="@id/iv_invitation_code" />

        <TextView
            android:id="@+id/tv_invitation_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_invitation_code"
            android:textAppearance="@style/TextAppearance.Kkumul.body_01"
            android:textColor="@color/main_color"
            app:layout_constraintEnd_toEndOf="@id/iv_invitation_code"
            app:layout_constraintStart_toStartOf="@id/iv_invitation_code"
            app:layout_constraintTop_toBottomOf="@id/tv_invitation_code_title" />

        <ImageView
            android:id="@+id/iv_btn_invite_later"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/shape_gray3_fill_bl_8_rect"
            app:layout_constraintBottom_toBottomOf="@id/iv_dialog_invitation_code"
            app:layout_constraintDimensionRatio="155:52"
            app:layout_constraintEnd_toStartOf="@id/iv_btn_copy"
            app:layout_constraintStart_toStartOf="@id/iv_dialog_invitation_code"
            app:layout_constraintTop_toBottomOf="@id/iv_invitation_code"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_btn_invite_later"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_invite_later"
            android:textAppearance="@style/TextAppearance.Kkumul.body_03"
            android:textColor="@color/white0"
            app:layout_constraintBottom_toBottomOf="@id/iv_btn_invite_later"
            app:layout_constraintEnd_toEndOf="@id/iv_btn_invite_later"
            app:layout_constraintStart_toStartOf="@id/iv_btn_invite_later"
            app:layout_constraintTop_toTopOf="@id/iv_btn_invite_later" />

        <ImageView
            android:id="@+id/iv_btn_copy"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/shape_gray7_fill_br_8_rect"
            app:layout_constraintBottom_toBottomOf="@id/iv_dialog_invitation_code"
            app:layout_constraintDimensionRatio="155:52"
            app:layout_constraintEnd_toEndOf="@id/iv_dialog_invitation_code"
            app:layout_constraintStart_toEndOf="@id/iv_btn_invite_later" />

        <TextView
            android:id="@+id/tv_btn_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_copy"
            android:textAppearance="@style/TextAppearance.Kkumul.body_03"
            android:textColor="@color/white0"
            app:layout_constraintBottom_toBottomOf="@id/iv_btn_copy"
            app:layout_constraintEnd_toEndOf="@id/iv_btn_copy"
            app:layout_constraintStart_toStartOf="@id/iv_btn_copy"
            app:layout_constraintTop_toTopOf="@id/iv_btn_copy" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>