<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green1">

        <ImageView
            android:id="@+id/iv_welcome_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="94dp"
            android:layout_marginTop="220dp"
            android:src="@drawable/ic_welcome_character"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/tv_welcome"
            android:textAppearance="@style/TextAppearance.Kkumul.head_01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_welcome_character" />

        <TextView
            android:id="@+id/tv_welcome_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/tv_welcome_description"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Kkumul.body_06"
            android:textColor="@color/gray6"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"/>

        <Button
            android:id="@+id/btn_okay"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="14dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/shape_green_fill_8_rect"
            android:text="@string/okay"
            android:textAppearance="@style/TextAppearance.Kkumul.body_03"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>